# CMake-Template

./: .gitignore  CMakeLists.txt
apps/main/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/module1/: CMakeLists.txt
modules/module1/include/: add.h  sub.h
modules/module1/src/: add.cpp  sub.cpp
modules/module1/test/: CMakeLists.txt  add_test.cpp
modules/module2/: CMakeLists.txt
modules/module2/include/: calculator.h
modules/module2/src/: calculator.cpp
modules/module2/test/: CMakeLists.txt  calculator_test.cpp
